portfolio cards correct gap units

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -8,7 +8,7 @@
 .cards__item {
   width: 370px;
   border: 1px solid #eeeeee;
-  flex-basis: ((100% - 2 * 30px) / 3);
+  flex-basis: ((1100px - 2 * 30px) / 3);
 }
 
 .cards__item:hover,
